[package]
name = "fontloader-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.30"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.57", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = "z"     # 优化代码大小
lto = true          # 启用链接时优化 (Link Time Optimization)
codegen-units = 1   # 降低并行度以获得更好的优化
panic = "abort"     # 发生 panic 时直接退出，减小标准库体积
strip = true        # 自动移除调试符号
